# pc_watcher

./: Cargo.toml  README.md  build.rs
src/: alert_window.rs  event_hook.rs  logger.rs  main.rs  notification.rs  process_info.rs  screenshot.rs  tray.rs
