[package]
name = "pc_watcher"
version = "1.0.0"
edition = "2021"
authors = ["PC Watcher"]
description = "Windows application for capturing all window focus events"

[dependencies]
# Windows API Bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
]}

# Async Runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread", "fs", "time"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
tracing-appender = "0.2"

# Date and Time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line arguments
clap = { version = "4", features = ["derive"] }

# Crossbeam for lock-free channels
crossbeam-channel = "0.5"

# Parking lot for faster mutexes
parking_lot = "0.12"

# One-time initialization
once_cell = "1.19"

# Lazy static for global variables
lazy_static = "1.4"

# CTRL+C Handler
ctrlc = "3.4"

# Hostname
hostname = "0.4"

# Save screenshots as JPEG
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
